Added new box creation in description document

--- a/doc/description/description.tex
+++ b/doc/description/description.tex
@@ -32,6 +32,11 @@ In developing this program, the following techniques will be explored:
      \item Changing color
      \item Setting tranparency
     \end{itemize}
+\item Expanding sketch with new cubes
+    \begin{itemize}
+     \item Drawing layers in the new cube might use the edges of layers in adjacent cube
+     \item While drawing lines will snap to existing lines
+    \end{itemize}
 \end{itemize}
 
 
@@ -114,6 +119,26 @@ Here we show a possible sequence of manipulations to  quickly create some geolog
   \footnotesize
   Here we have turned of tranparency and the sides become opaque
   \label{fig:offTransparency}
+}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=4in]{newCube}
+\caption[]{
+  \footnotesize
+  Now we might add a new cube to expand our drawing
+  \label{fig:newCube}
+}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=4in]{newCubeLayer}
+\caption[]{
+  \footnotesize
+  Drawing a new layer. Lines snap towards existing lines in adjacent cube.
+  \label{fig:newCubeLayer}
 }
 \end{figure}
 
