Created latex for thesis, bibtex file. Made plan.

--- a/doc/description/description.tex
+++ b/doc/description/description.tex
@@ -192,6 +192,8 @@ Here we show a possible sequence of manipulations to  quickly create some geolog
 \end{itemize}
 \end{itemize}
 
+\clearpage
+
 
 \end{document}
 
