--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Originally made by
 
 	Morten Bendiksen - morten.bendiksen<at>gmail.com
 
-You are free to use all code published by me in any way you see fit, so long as you never sue me. But you are asked politely to keep my name somewhere nearby the code when redistributing it. (This is only to reduce risk of potential lawsuit from silly people claiming to be the authors)
+You are free to use all code here in any way you see fit, so long as you never sue me. But you are asked politely to keep my name somewhere nearby the code when redistributing it. Live free or die!
 
 Description:
 A rapid sketching program for geologists. See doc folder for more details.
