Changed licence to GPL.

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Originally made by
 
 	Morten Bendiksen - morten.bendiksen<at>gmail.com
 
-You are free to use all code here in any way you see fit, so long as you never sue me. But you are asked politely to keep my name somewhere nearby the code when redistributing it. Live free or die!
+This program and its source code is licenced under the GPL. Live free or die!
 
 Description:
 A rapid sketching program for geologists. See doc folder for more details.
