river oversketch sort of works

--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -11,15 +11,26 @@
 \maketitle
 
 \begin{abstract}
-This thesis investigates new techniques for rapid modeling of geological structures. It uses sketch-based and procedural-based techniques for making quick sketches that can be used for communication amongst geologists and from geologists to lay persons. The effectiveness of these techniques are discussed in collaboration with geologist.
+An investigation of new techniques for rapid modeling of geological structures and a assessment of their usefulness. A program was developed that uses sketch-based and procedural-based techniques for making quick sketches of geological areas. These models are intended to be used for communication amongst geologists and from geologists to lay persons. The fitness of the techniques are measured by the speed at wich one can create a model and the resulting models ability to convey the intent of the artist.
 \end{abstract}
 
 \section{Introduction}
-When geologists are surveying a new area, they use sketches to communicate with each other and with decision makers. To facilitate this process I propose that a computer assisted sketch based modeling approach would increase productivity and enhance communication.
+When geologists are surveying a new area, they use sketches to communicate with each other and with decision makers. To facilitate this process I propose that a computer assisted sketch based modeling approach would increase productivity and enhance communication. This is supposed to be a replacement for doing sketches on paper or in 2d-drawing programs. Therefore it will not be the intent of the solution to create highly detailed structures that can be used for other scientific purposes such as simulations. The intent is to enable and augment the illustration of ideas about an area that geologists are exploring.
+
+\subsection{Modeling}
+Models are objects or concepts that are used to represent other objects or concepts. Models are part of what makes thinking about reality possible for human beings. A models fitness can be measured against how well it corresponds to the thing or idea it is supposed to model and how useful it is for whatever the purpose of it's creation. For it to have any usefulness at all, the person who uses the model needs to understand in what ways the model actually does correspond to what it models, what it is actually modelling, and in what detail and what the limitations of the particular choise of representation are.
+
+\subsection{Computer modeling}
+Computers have great powers of computation. This is often exploited to do analysis and computations on such models. 
+Other times the computers powers are used to facilitate the creation of the model itself. Examples are; creating and using a spreadsheet to help understand and balance a budget, drawing a digital model of an engine part, doing simulations on models of weather data, etc. Some times both are true. The computer is first used to create a model of something, and then it might run some simulations to find out something about the model. It is then up to humans to interpret the output and hopefully gain new knowledge.
+
+Geometric modelling or computer-aided geometric design is one particular type of computer modeling. This is often used to model geologigal structures.
 
 \subsection{Geologic modeling}
+Geologic modelling og geomodelling is the act of creating models of the subsurface of a piece of the earth.
 
 \subsection{Sketch based modeling}
+Sketch based modeling is an approach to modeling where the input method is based upon insigths from how artists draw on paper. The idea is that it will be more intuitive and quick to both learn and draw with such a method. If the computer is able to interpret from the artists input what his intent is, this gives many opportunities that are not available on paper, such as rotating, undo functionality and further computation to augment the illustrations. At the same time we get the ease of intuitive input methods. This approach tries to give the best of both worlds.
 \subsubsection{Input methods}
 \subsubsection{Input interpretation}
 \subsubsection{Representation}
