changes to thesis

--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -11,45 +11,73 @@
 \maketitle
 
 \begin{abstract}
-An investigation of new techniques for rapid modeling of geological structures and a assessment of their usefulness. A program was developed that uses sketch-based and procedural-based techniques for making quick sketches of geological areas. These models are intended to be used for communication amongst geologists and from geologists to lay persons. The fitness of the techniques are measured by the speed at wich one can create a model and the resulting models ability to convey the intent of the artist.
+An investigation of new techniques for rapid modeling of geological structures and a assessment of their usefulness. A program is developed that uses sketch-based techniques for making quick sketches of geological areas. These models are intended to be used for communication amongst geologists and from geologists to lay persons. The techniques are measured by the speed at wich one can create a model and the resulting models ability to convey the intent of the artist.
 \end{abstract}
 
+\newpage
+
+\tableofcontents 
+
+\newpage
+
 \section{Introduction}
-When geologists are surveying a new area, they use sketches to communicate with each other and with decision makers. To facilitate this process I propose that a computer assisted sketch based modeling approach would increase productivity and enhance communication. This is supposed to be a replacement for doing sketches on paper or in 2d-drawing programs. Therefore it will not be the intent of the solution to create highly detailed structures that can be used for other scientific purposes such as simulations. The intent is to enable and augment the illustration of ideas about an area that geologists are exploring.
+Sketch based modeling is a way to draw 3D models on a computer. It differs from other methods in that the user inputs 2D sketches in stead of editing polygons. These sketches are then interpreted and a 3D model is created.
+
+When geologists are surveying a new area, they use sketches to communicate with each other. To facilitate this process I propose that a computer assisted sketch based modeling approach would increase productivity and enhance communication. This will be a replacement for doing sketches on paper or in 2D drawing programs. The intent is to enable and augment the illustration of ideas about an area that geologists are exploring in the field or for education. It is not intended to create highly detailed structures that can be used for other scientific purposes such as simulations. 
 
 \subsection{Modeling}
-Models are objects or concepts that are used to represent other objects or concepts. Models are part of what makes thinking about reality possible for human beings. A models fitness can be measured against how well it corresponds to the thing or idea it is supposed to model and how useful it is for whatever the purpose of it's creation. For it to have any usefulness at all, the person who uses the model needs to understand in what ways the model actually does correspond to what it models, what it is actually modelling, and in what detail and what the limitations of the particular choise of representation are.
+Models are part of what makes thinking about reality possible for human beings. A models fitness can be measured against how well it corresponds to the thing or idea it is supposed to model and how useful it is for whatever the purpose of it's creation. For it to have any usefulness at all, the person who uses the model needs to understand in what ways the model actually does correspond to what it models, what it is actually modelling, and in what detail and what the limitations of the particular choise of representation are.
 
 \subsection{Computer modeling}
-Computers have great powers of computation. This is often exploited to do analysis and computations on such models. 
-Other times the computers powers are used to facilitate the creation of the model itself. Examples are; creating and using a spreadsheet to help understand and balance a budget, drawing a digital model of an engine part, doing simulations on models of weather data, etc. Some times both are true. The computer is first used to create a model of something, and then it might run some simulations to find out something about the model. It is then up to humans to interpret the output and hopefully gain new knowledge.
+Models are objects or concepts that are used to represent other objects or concepts. Humans use models to reason about reality in many different ways.
 
-Geometric modelling or computer-aided geometric design is one particular type of computer modeling. This is often used to model geologigal structures.
+Computers have great powers of computation. This is often exploited to do analysis and computations on models and/or for creating the model itself. Geometric modelling or computer-aided geometric design is one particular type of computer modeling. This is often used to model geologigal structures.
 
 \subsection{Geologic modeling}
-Geologic modelling og geomodelling is the act of creating models of the subsurface of a piece of the earth.
+Geologic modeling og geomodeling is the act of creating models of the subsurface of a piece of the earth.
 
 \subsection{Sketch based modeling}
 Sketch based modeling is an approach to modeling where the input method is based upon insigths from how artists draw on paper. The idea is that it will be more intuitive and quick to both learn and draw with such a method. If the computer is able to interpret from the artists input what his intent is, this gives many opportunities that are not available on paper, such as rotating, undo functionality and further computation to augment the illustrations. At the same time we get the ease of intuitive input methods. This approach tries to give the best of both worlds.
-\subsubsection{Input methods}
-\subsubsection{Input interpretation}
-\subsubsection{Representation}
 
-\section{Choise of techniques}
 
-\section{Implementation}
+\section{Geologic concepts}
+\subsection{Time}
+\subsection{rocks}
+\subsection{layers}
+\subsection{faults}
+\subsection{rivers}
+
+
+\section{State of the art}
+\subsection{geomodelling}
+\subsection{sketch based modelling}
+
+\section{Solution}
+\subsection{overview}
+\subsection{input}
+\subsection{output}
+
+\section{Methodology}
+\subsection{Input method}
+\subsection{Input interpretation}
+\subsection{Representation}
+\subsection{Rendering}
+
+\section{Results and performance}
+\subsection{Produced Illustrations}
+\subsection{Performance of user}
+\subsection{Performance of program}
 
 \section{Evaluation}
+\subsection{Usability}
 
 \section{Conclusion}
+\subsection{summary}
+\subsection{Further work}
 
-\section{Further work}
 
+Testing references: Cherlin ~\cite{Cherlin:2005:SMF:1090122.1090145} explores techniques for rapid sketch based 3d modeling.
 
-Cherlin ~\cite{Cherlin:2005:SMF:1090122.1090145} explores techniques for rapid sketch based 3d modeling.
-
-Traditional modeling of three dimensional 
-Sketch based modeling is a technique for modeling, where 
 
 \bibliography{thesis}{}
 \bibliographystyle{plain}
